Fixes #157: Streamline ND workflow by adding predefined RFC. Submitted by igor.
git-svn-id: https://svn.clinovo.com/clincapture/trunk@856 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -424,6 +424,8 @@ click_to_upload = Click to upload file
 
 close = Close
 
+close_discrepancies_descriptions = Close Discrepancies Descriptions
+
 close_window = Close Window
 
 exit_to_home_page = Exit to Home Page
@@ -807,6 +809,9 @@ descending_sort = descending sort
 
 description = Description
 
+descriptions_for_closing = Descriptions for closing
+
+descriptions_for_updating = Descriptions for updating
 
 design_details = Design Details
 
@@ -1464,6 +1469,8 @@ notes = Notes
 
 notes_and_discrepancies = Notes & Discrepancies
 
+notes_and_discrepancies_descriptions = Notes & Discrepancies Descriptions
+
 null_values = Null Values
 
 num_CRFs_SDV = # of CRFs SDV'd
@@ -1655,7 +1662,11 @@ re-populated = re-populated
 
 reason_for_change = Reason for Change
 
-reason_for_change_descriptions = Reason For Change Descriptions
+reason_for_change_descriptions = Reason for Change Descriptions
+
+reason_for_update_descriptions = Reason for Update Descriptions
+
+reason_for_close_descriptions = Reason for Close Descriptions
 
 reassign = Reassign
 
@@ -2318,6 +2329,8 @@ update_a_subject_group_class = Update a Subject Group Class
 update_by = Updated By
 
 update_dataset_properties = Update Dataset Properties
+
+update_discrepancies_descriptions = Update Discrepancies Descriptions
 
 update_profile = Update Profile
 
