Fixes #738: Show the Note ID on the 'show more' part of the N&D table. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@860 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2703,6 +2703,7 @@ unarchive = Unarchive
 Unarchive_CRF_Version = Unarchive CRF Version
 
 discrepancy_note_id = Discrepancy Note ID
+note_id = Note ID
 discrepancy_thread_id = Discrepancy Thread ID
 hide_summary_statistics = Hide summary statistics
 show_summary_statistics = Show summary statistics
