Fixes #687: Rework site details page. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@865 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1972,6 +1972,8 @@ sign_subject = Sign Subject
 
 site = Site
 
+site_crfs = Print All Site CRFs
+
 site_level = Site-Level
 
 site_name = Site Name
