Fixes #686: Add site management option to the tasks menu. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@870 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -383,7 +383,7 @@ manage_all_event_definitions_in_study = Manage All Event Definitions in Study
 
 manage_all_groups_in_study = Manage All Groups in Study
 
-manage_all_sites_in_study = Manage All Sites in Study
+manage_all_sites_in_study = Manage Sites in Study
 
 manage_all_subjects_in = Manage All Subjects in
 
