--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -686,6 +686,8 @@ create_rules = Create Rules
 
 create_sites = Create Sites
 
+create_site = Create Site
+
 create_study = Create Study
 
 create_subject_group_classes = Create Subject Group Classes
