Fixes #693: Implement shortcut to data entry. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@872 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -514,8 +514,11 @@ restore_rule_assignment_2 = The Rule Assignment and all rules associated with it
 
 revise_CRF_version = Revise CRF Version
 
+schedule_events = Schedule Events
 
 save_and_add_next_subject = Save and Add Next Subject
+
+add_next_subject = Add Next Subject
 
 save_and_assign_study_event = Save and Assign Study Event
 
