--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -1469,6 +1469,8 @@ note_that_all_jobs_are_set = Note that all jobs are set to run on the server tim
 
 notes = Notes
 
+perform_one_of_the_operations_below = You can also add the subject and perform one of the operations below
+
 notes_and_discrepancies = Notes & Discrepancies
 
 notes_and_discrepancies_descriptions = Notes & Discrepancies Descriptions
@@ -1846,6 +1848,8 @@ save_and_export = Save And Export
 save_filter = Save Filter
 
 schedule = Schedule
+
+start_data_entry = Start Data Entry
 
 schedule_another_event = Schedule Another Event: (optional)
 
