Fixes #726: Increase the max size of 'brief summary' to 2000 characters. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@891 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -136,6 +136,8 @@ item_save_failed_because_database_error = The following items cannot be saved in
 
 maximum_lenght_brief_summary_255 = The maximum length of Brief Summary is 255 characters.
 
+maximum_lenght_brief_summary_2000 = The maximum length of Brief Summary is 2000 characters.
+
 maximum_lenght_name_100 = The maximum length of Brief Title is 100 characters.
 
 maximum_lenght_official_title_255 = The maximum length of Official Title is 255 characters.
