Fixes #852: Change the default medical coding dictionary to bio-ontology. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@915 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3204,7 +3204,7 @@ import_summary_subjects_out_of_affected = Subjects: {0} out of {1} affected
 import_summary_events_out_of_affected = Events: {0} out of {1} affected
 import_summary_item_out_of_affected = Items: {0} out of {1} affected
 allowCodingVerification = Allow medical coding verification
-defaultMedicalCodingDictionary = Default Dictionary
+defaultBioontologyURL = Bioontology URL
 dictionary=Dictionary
 mc_dictionaries=Medical Coding Dictionaries
 autoCodeDictionaryName=Auto-code Dictionary Name
