Fixes #36: Scheduling events during import. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@917 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3033,6 +3033,7 @@ endDateTimeLabel=End Date/Time Label:
 startDateTimeLabel=Start Date/Time Label:
 
 markImportedCRFAsCompleted=Mark imported CRF as Completed?
+autoScheduleEventDuringImport=Auto-schedule event during import?
 
 allowSdvWithOpenQueries=Allow SDV with open queries?
 
@@ -3042,6 +3043,7 @@ days_after_it_was_last_used = days after it was last used
 
 subjectForm=Subject Form
 studyEventForm=Study Event Form
+dataImport=Data Import
 
 studyShoudBeInAvailableMode=The Study's status needs to be 'Available' in order to enter data!
 
