--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -730,6 +730,9 @@ your_openclinica_password = Your ClinCapture password
 your_password_has_been_reset_as = Your password has been reset as
 your_password_has_been_reset_on_openclinica = Your password has been reset on the ClinCapture system.  Your login information follows
 
+your_account_has_been_restored_and_password_reset_email_message_html = Dear {0},<br><br>Your account on the ClinCapture system has been restored, and your password has been reset. Your login information follows:<br><br>User Name: {1}<br>Password: {2}<br><br>Please test your login information and let us know if you have any problems by going to the following URL:<br>{3}<br><br>Best,<br><br>System Administrator for {4}
+
+your_account_has_been_removed_email_message_html = Dear {0},<br><br>Your account on the ClinCapture system has been removed (user name: {1}). You will no longer have access to the system.<br><br>Best,<br><br>System Administrator for {2}
 
 you_choose_to_restore_the_following_study = You choose to restore the following study
 
@@ -744,6 +747,8 @@ your_account_has_been_unlocked_and_password_reset = Your account on the ClinCapt
 your_current_active_study_is = Your current active study is
 
 your_new_openclinica_account = Your New ClinCapture Account
+
+your_clin_capture_account_has_been_removed = Your ClinCapture account has been removed
 
 your_new_openclinica_account_has_been_restored = Your ClinCapture account has been restored
 
