Fixes #856: Fix the side bar instructions for medical coding page. Submitted by markg
git-svn-id: https://svn.clinovo.com/clincapture/trunk@926 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -808,3 +808,5 @@ this_action_was_triggered = This action was triggered
 due_to_excessive_failed_login_attempts = due to excessive failed login attempts
 when_a_user_tried_to_login_with_this_account = when a user tried to login with this account
 after_a_period_of_inactivity_of_more_than = after a period of inactivity of more than
+
+design_implement_coding = The main window allows you to perform medical coding on CRF items that have been defined to be coded.  Note that this is a list of items that have already been saved during data entry.  You can review the CRF directly after coding by clicking on the green icon.
