--- a/core/src/main/java/org/akaza/openclinica/i18n/notes.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/notes.properties
@@ -739,3 +739,5 @@ your_password_has_been_reset_on_openclinica = Your password has been reset on th
 html_output=Extract to HTML
 html_output_link=Click here
 html_helptext=Extracting to an HTML file for printing to hard copy
+
+design_implement_coding = The main window allows you to perform medical coding on CRF items that have been defined to be coded.  Note that this is a list of items that have already been saved during data entry.  You can review the CRF directly after coding by clicking on the green icon.
