--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -730,6 +730,18 @@ your_openclinica_password = Your ClinCapture password
 your_password_has_been_reset_as = Your password has been reset as
 your_password_has_been_reset_on_openclinica = Your password has been reset on the ClinCapture system.  Your login information follows
 
+notification_deleting_role = Your ClinCapture user role has been deleted
+
+notification_removing_role = Your ClinCapture user role has been removed
+
+notification_restoring_role = Your ClinCapture user role has been restored
+
+delete_role_email_message_htm = Dear {0},<br><br>Your role on the ClinCapture system has been deleted.<br><br>User name: {1}<br>Role: {2}<br>Study/site: {3}<br><br>Best,<br>Administrator for {3}
+
+remove_role_email_message_htm = Dear {0},<br><br>Your role on the ClinCapture system has been removed.<br><br>User name: {1}<br>Role: {2}<br>Study/site: {3}<br><br>Best,<br>Administrator for {3}
+
+restore_role_email_message_htm = Dear {0},<br><br>Your role on the ClinCapture system has been restored.<br><br>User name: {1}<br>Role: {2}<br>Study/site: {3}<br><br>Best,<br>Administrator for {3}
+
 your_account_has_been_restored_and_password_reset_email_message_html = Dear {0},<br><br>Your account on the ClinCapture system has been restored, and your password has been reset. Your login information follows:<br><br>User Name: {1}<br>Password: {2}<br><br>Please test your login information and let us know if you have any problems by going to the following URL:<br>{3}<br><br>Best,<br><br>System Administrator for {4}
 
 your_account_has_been_removed_email_message_html = Dear {0},<br><br>Your account on the ClinCapture system has been removed (user name: {1}). You will no longer have access to the system.<br><br>Best,<br><br>System Administrator for {2}
