--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -1,4 +1,3 @@
-
 As_a_Technical_Administrator_you_have_privileges_to = As a Technical Administrator you have privileges to administer everything that a Business Administrator can--all subjects, users, CRFs and studies/sites created across the system. Technical Administrators have 'super-user' privileges over other user accounts and may not be disabled or modified by Business Administrators.
 
 CRF_library_shows_all_CRFs = The Case Report Form (CRF) Library shows all CRFs available for use in studies. CRFs may have one or more versions, each with its own version name. You may add any existing CRF to a Study Event Definition in your study. You may also create a new ClinCapture CRF or CRF version using the Excel template provided below and uploading it to the system.
@@ -821,4 +820,4 @@ due_to_excessive_failed_login_attempts = due to excessive failed login attempts
 when_a_user_tried_to_login_with_this_account = when a user tried to login with this account
 after_a_period_of_inactivity_of_more_than = after a period of inactivity of more than
 
-design_implement_coding = The main window allows you to perform medical coding on CRF items that have been defined to be coded.  Note that this is a list of items that have already been saved during data entry.  You can review the CRF directly after coding by clicking on the green icon.
+design_implement_coding =  This window allows you to perform medical coding on CRF items that have been defined to be coded, by clicking on the 'Code' icon. <p>Note that this is a list of items that have already been saved during data entry. You can review the CRF directly by clicking on the 'Open CRF' icon and if necessary send queries to the site.</p><p> If enabled, auto-coding can be performed on synonym terms already coded using a custom dictionary. Medical codes can be un-coded or permanently deleted from the custom dictionary.</p>
