Fixes #859: Implement coding with or without context. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@939 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/words.properties
@@ -2995,3 +2995,4 @@ pwd_reqs_expiration_days_note=(Password expiration will not be verified if set t
 pwd_reqs_server_restart=(Changes in this configuration are applied after a server restart.)
 autoCodeDictionaryName=Auto-code Dictionary Name
 medicalCodingApprovalNeeded=Medical Coding Approval Needed
+medicalCodingContextNeeded=Code with context?
