--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3205,3 +3205,4 @@ mc_dictionaries=Medical Coding Dictionaries
 autoCodeDictionaryName=Auto-code Dictionary Name
 medicalCodingApprovalNeeded = Medical Coding Approval Needed
 message_for_not_scheduled_event_if_study_is_not_available=To schedule this event the current Study's status needs to be 'Available'.
+medicalCodingContextNeeded=Code with context?
