Fixes #587: Enable the creation of subjects from import data files. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@944 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3034,6 +3034,7 @@ startDateTimeLabel=Start Date/Time Label:
 
 markImportedCRFAsCompleted=Mark imported CRF as Completed?
 autoScheduleEventDuringImport=Auto-schedule event during import?
+autoCreateSubjectDuringImport=Auto-create subject during import?
 
 allowSdvWithOpenQueries=Allow SDV with open queries?
 
