Fixes #728: Auto-code should be manually initiated. Submitted by satoshi
git-svn-id: https://svn.clinovo.com/clincapture/trunk@945 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/words.properties
@@ -2995,4 +2995,5 @@ pwd_reqs_expiration_days_note=(Password expiration will not be verified if set t
 pwd_reqs_server_restart=(Changes in this configuration are applied after a server restart.)
 autoCodeDictionaryName=Auto-code Dictionary Name
 medicalCodingApprovalNeeded=Medical Coding Approval Needed
+autoCode=Auto-Code
 medicalCodingContextNeeded=Code with context?
