--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3206,4 +3206,5 @@ mc_dictionaries=Medical Coding Dictionaries
 autoCodeDictionaryName=Auto-code Dictionary Name
 medicalCodingApprovalNeeded = Medical Coding Approval Needed
 message_for_not_scheduled_event_if_study_is_not_available=To schedule this event the current Study's status needs to be 'Available'.
+autoCode=Auto-Code
 medicalCodingContextNeeded=Code with context?
