Fixes #855: Removed events are listed in the Select Event drop down on the Subject Matrix. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@952 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -26,6 +26,8 @@ alert_to_print = Press <control + p> or right click on the page to print.
 
 all_events = All Events
 
+all_events_in_group_removed = All of the events included in group have been removed
+
 allows = allows:
 
 also_download_set_example_CRFs = You may also download a set of example CRFs and instructions from the ClinCapture portal (ClinCapture user account required)\u0009
