--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3208,3 +3208,4 @@ medicalCodingApprovalNeeded = Medical Coding Approval Needed
 message_for_not_scheduled_event_if_study_is_not_available=To schedule this event the current Study's status needs to be 'Available'.
 autoCode=Auto-Code
 medicalCodingContextNeeded=Code with context?
+medicalCodingApiKey = Bioontology API key
