Fixes #875: Update bioontology search logic with study parameter. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@955 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/words.properties
@@ -2998,3 +2998,4 @@ medicalCodingApprovalNeeded=Medical Coding Approval Needed
 autoCode=Auto-Code
 medicalCodingContextNeeded=Code with context?
 medicalCodingApiKey = Bioontology API key
+medicalCodingApiKey = Bioontology API key
