--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3209,3 +3209,4 @@ message_for_not_scheduled_event_if_study_is_not_available=To schedule this event
 autoCode=Auto-Code
 medicalCodingContextNeeded=Code with context?
 medicalCodingApiKey = Bioontology API key
+medicalCodingApiKey = Bioontology API key
