Fixes #895: Tool tip of the Delete icon should be "Delete Code&Alias". Submitted by satoshi
git-svn-id: https://svn.clinovo.com/clincapture/trunk@963 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3209,3 +3209,5 @@ autoCode=Auto-Code
 medicalCodingContextNeeded=Code with context?
 medicalCodingApiKey = Bioontology API key
 medicalCodingApiKey = Bioontology API key
+deleteAlias=Delete Code&Alias
+openCrf=Open CRF
