Fixes #882: Improve search pop design. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@964 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3211,3 +3211,5 @@ medicalCodingApiKey = Bioontology API key
 medicalCodingApiKey = Bioontology API key
 deleteAlias=Delete Code&Alias
 openCrf=Open CRF
+unCode = unCode
+code = Code
