Fixes #868: Discrepancies assigned to me does not match the count shown in the ND page. Submitted by aram
git-svn-id: https://svn.clinovo.com/clincapture/trunk@969 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -250,6 +250,8 @@ not_applicable = Not Applicable
 
 not_asked = not asked
 
+not_assigned = Not Assigned
+
 not_available = not available
 
 not_equal_to = not equal to
