--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3199,7 +3199,7 @@ import_summary_item_affected = Items: {0} affected
 import_summary_subjects_out_of_affected = Subjects: {0} out of {1} affected
 import_summary_events_out_of_affected = Events: {0} out of {1} affected
 import_summary_item_out_of_affected = Items: {0} out of {1} affected
-allowCodingVerification = Allow medical coding verification
+allowCodingVerification = Allow medical coding
 defaultBioontologyURL = Bioontology URL
 dictionary=Dictionary
 mc_dictionaries=Medical Coding Dictionaries
