Fixes #899: 'Code Not Found' state for coded items. Submitted by satoshi
git-svn-id: https://svn.clinovo.com/clincapture/trunk@997 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/words.properties
@@ -2999,3 +2999,7 @@ autoCode=Auto-Code
 medicalCodingContextNeeded=Code with context?
 medicalCodingApiKey = Bioontology API key
 medicalCodingApiKey = Bioontology API key
+toBeCoded = To be Coded
+toBeApproved = To be Approved
+codeNotFound = Code Not Found
+completed = Completed
