--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3214,3 +3214,7 @@ deleteAlias=Delete Code&Alias
 openCrf=Open CRF
 unCode = unCode
 code = Code
+toBeCoded = To be Coded
+toBeApproved = To be Approved
+codeNotFound = Code Not Found
+completed = Completed
