--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3217,3 +3217,5 @@ toBeCoded = To be Coded
 toBeApproved = To be Approved
 codeNotFound = Code Not Found
 completed = Completed
+expand = Expand
+collapse = Collapse
