Fixes #910: Update Medical Coding summary headers. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1005 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/java/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/java/org/akaza/openclinica/i18n/words.properties
@@ -2998,8 +2998,9 @@ medicalCodingApprovalNeeded=Medical Coding Approval Needed
 autoCode=Auto-Code
 medicalCodingContextNeeded=Code with context?
 medicalCodingApiKey = Bioontology API key
-medicalCodingApiKey = Bioontology API key
-toBeCoded = To be Coded
-toBeApproved = To be Approved
-codeNotFound = Code Not Found
-completed = Completed
+notCoded = Not Coded
+notApproved = Not Approved
+codeNotFound = Code not Found
+completed = Coded
+expand = Expand
+collapse = Collapse
