--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2860,7 +2860,9 @@ import_summary_item_affected = Items: {0} affected
 import_summary_subjects_out_of_affected = Subjects: {0} out of {1} affected
 import_summary_events_out_of_affected = Events: {0} out of {1} affected
 import_summary_item_out_of_affected = Items: {0} out of {1} affected
-toBeCoded = To be Coded
-toBeApproved = To be Approved
-codeNotFound = Code Not Found
-completed = Completed
+notCoded = Not Coded
+notApproved = Not Approved
+codeNotFound = Code not Found
+completed = Coded
+expand = Expand
+collapse = Collapse
