--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3213,9 +3213,9 @@ deleteAlias=Delete Code & Alias
 openCrf=Open CRF
 unCode = unCode
 code = Code
-toBeCoded = To be Coded
-toBeApproved = To be Approved
-codeNotFound = Code Not Found
-completed = Completed
+notCoded = Not Coded
+notApproved = Not Approved
+codeNotFound = Code not Found
+completed = Coded
 expand = Expand
 collapse = Collapse
