--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3216,6 +3216,6 @@ code = Code
 notCoded = Not Coded
 notApproved = Not Approved
 codeNotFound = Code not Found
-completed = Coded
+coded = Coded
 expand = Expand
 collapse = Collapse
