Fixes #951: Add missing prop in words.properties files. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1038 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3189,6 +3189,7 @@ sematic_type = Semantic Type
 smq_level = SMQ Level
 tui = TUI
 umls_cui = UMLS CUI
+completed = Completed
 
 import_summary_subjects_affected = Subjects: {0} affected
 import_summary_events_affected = Events: {0} affected
