Fixes #406: Allow users to build rules without XML programming. Submitted by sergey and satoshi
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1050 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3434,3 +3434,4 @@ systemProperty.ccts.waitBeforeCommit.description=This parameter is used for Clin
   with the Cancer Clinical Trials Suites, also known as the caBIG suite of applications. The parameter determines how long ClinCapture will hold a \
   transaction from C3PR and will wait for a roll back message before committing it to the database.
 systemProperty.ccts.waitBeforeCommit.measurements=(in milliseconds)
+create_rule=Create a Rule
