Fixes #953: Fix asterix characters in the Systems page. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1055 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -415,3 +415,5 @@ system_no_permission=No permission to configure system properties page
 error.systemProperty.logoFile.maxFileSizeExceeded=The maximum size of the logo file should be 20000 bytes.
 
 error.systemProperty.logoFile.forbiddenExtention=You can upload logo files with the .jpg or .jpeg extention only
+
+error.controllerErrorMsg=Sorry, an error has occurred. Try it again or contact your system administrator.
