Fixes #959: Aesthetic changes to system properties page and workflow. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1057 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -825,3 +825,6 @@ when_a_user_tried_to_login_with_this_account = when a user tried to login with t
 after_a_period_of_inactivity_of_more_than = after a period of inactivity of more than
 
 design_implement_coding =  This window allows you to perform medical coding on CRF items that have been defined to be coded, by clicking on the 'Code' icon. <p>Note that this is a list of items that have already been saved during data entry. You can review the CRF directly by clicking on the 'Open CRF' icon and if necessary send queries to the site.</p><p> If enabled, auto-coding can be performed on synonym terms already coded using a custom dictionary. Medical codes can be un-coded or permanently deleted from the custom dictionary.</p>
+
+system_properties_instruction = The system properties are listed here. Some of the properties are read-only and can only be changed in datainfo.properties. Expand the desired sections to change the system properties.
+system_properties_confirm_instruction = Please click Submit to commit the system properties listed here, Back to re-configure them and Cancel to cancel the operation without making any changes.
