Fixes #924: Remove auto-closing window on ND creation. Submitted by igor (with minor modifications)
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1073 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -166,6 +166,8 @@ did_not_match_crf_version = did not match the intended CRF version you want to u
 
 does_not_exist_in_group_spreadsheet = does not exist in the Groups spreadsheet. Please add it to the Groups spreadsheet, or change it to a Group that exists.
 
+do_not_show_this_message_anymore = Do not show this message anymore.
+
 duplicate = A duplicate
 
 email_body_1 = Study:
@@ -854,6 +856,16 @@ there_was_an_error_sending_reset_email_try_reset = There was an error sending th
 there_were_some_errors_submission = There were some errors in your submission.
 
 this_CRF_version = This CRF version
+
+this_note_is_associated_with_data = This note is associated with data
+
+this_note_is_associated_with_data_in_the_CRF = This note is associated with data in the CRF. It will be saved when you save the CRF data. If you exit from the CRF without saving it, the note will not be saved.
+
+this_note_is_associated_with_data_for_the_Study_Subject = This note is associated with data for the Study Subject. It will be saved when you save the Study Subject's data. If you exit without saving it, the note will not be saved.
+
+this_note_is_associated_with_data_for_the_Subject = This note is associated with data for the Subject. It will be saved when you save the Subject's data. If you exit without saving it, the note will not be saved.
+
+this_note_is_associated_with_data_for_the_Study_Event = This note is associated with data for the Study Event. It will be saved when you save the Study Event's data. If you exit without saving it, the note will not be saved.
 
 this_SED_cannot_be_restored = This Study Event Definition cannot be restored.
 
