Fixes #982: Rename 'Create a Rule' in Manage All Rules page to 'Design a Rule'. Submitted by satoshi
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1076 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2866,4 +2866,4 @@ codeNotFound = Code not Found
 completed = Coded
 expand = Expand
 collapse = Collapse
-create_rule=Create a Rule
+create_rule=Design a Rule
