--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -772,7 +772,7 @@ default = Default
 
 default_active_study = Default Active Study
 
-default_group = Default Group 
+default_group = Default Group
 
 default_group_already_exists = Default Group already exists
 
@@ -1082,7 +1082,7 @@ first_name = First Name
 
 first_page = first page
 
-for_subject = for Subject 
+for_subject = for Subject
 
 forgot_password = Forgot Password?
 
@@ -2863,7 +2863,7 @@ rule_verify_import_dup_valid_rules_num=<b>#</b> of rule updates:
 rule_verify_import_valid_rule_assign_num=<b>#</b> of new rule assignments:
 rule_verify_import_invalid_rule_assign_num=<b>#</b> of invalid rule assignments:
 rule_verify_import_dup_valid_rule_assign_num=<b>#</b> of rule assignment updates:
-rule_verify_import_rule_message=  Press OK to save all new and updated rules and rule assignments. Invalid Rules and Rule Assignment will not be saved.    
+rule_verify_import_rule_message=  Press OK to save all new and updated rules and rule assignments. Invalid Rules and Rule Assignment will not be saved.
 unique_crfs= Unique CRFs
 unique_items= Unique Items
 unique_rule_assignments= Unique Rule <br>&nbsp;&nbsp;&nbsp; Assignments
@@ -2879,7 +2879,7 @@ test_rules_actions= Actions:
 test_rules_if_expression_evaluates= If Expression Evaluates:
 test_rules_execute_action= Execute Action:
 rule_action_message= Message:
-rule_action_to= To\: 
+rule_action_to= To\:
 test_rules_step_2= Step 2: Specify test values for variables in your rule expression
 test_rules_step_3= Step 3: Verify results
 test_rules_rule_validation= Rule Validation:
@@ -3058,11 +3058,11 @@ choose_CRF_version=Reassign CRF to a New Version
 
 choose_CRF_version_crf_name=CRF Name
 
-choose_CRF_version_current_crf_version_title=Current CRF Version 
-choose_CRF_version_combo_title=New CRF Version 
+choose_CRF_version_current_crf_version_title=Current CRF Version
+choose_CRF_version_combo_title=New CRF Version
 
 confirm_CRF_version=Confirm CRF Version Change
-confirm_CRF_version_crf_title= CRF 
+confirm_CRF_version_crf_title= CRF
 confirm_CRF_version_current_version=Current CRF Version
 confirm_CRF_version_new_version=Selected CRF Version
 confirm_CRF_version_field_name=Item Name
@@ -3145,7 +3145,7 @@ day_min = Day Min
 day_email = Day Email
 reference_visit_already_exist = A Reference visit already exists
 after_the_reference_visit = Number of days this event will be automatically scheduled after the last reference event completes.
-the_maximum_day_that_an_event = Maximum days that this event can be completed after the last reference event is completed. Completing this event  later generates an automatic query.	
+the_maximum_day_that_an_event = Maximum days that this event can be completed after the last reference event is completed. Completing this event  later generates an automatic query.
 the_minimum_day_that_an_event = Minimum days that this event can be completed after the last reference event completes. Completing this event earlier generates an automatic query.
 the_day_a_reminder_email_is = Number of days a reminder email is sent out after the last reference visit is completed.
 use_only_a_valid_user_name = Use only a valid user name in this field
@@ -3282,7 +3282,7 @@ systemProperty.crfFileExtensionSettings.label=
 systemProperty.crfFileExtensionSettings.description=
 
 systemProperty.log.dir.label=Logs path
-systemProperty.log.dir.description=These Properties configure the logging features of ClinCapture. The logs path format depends on your operating system. \
+systemProperty.log.dir.description=These Properties configure the logging features of ClinCapture. The logs path format depends on your operating system. <br/><br/> \
   For example:<br/><br/> \
   Windows: C:\\\\clincapture\\\\tomcat\\\\logs<br/> \
   Linux:       /usr/local/tomcat/logs
@@ -3342,6 +3342,11 @@ systemProperty.extract.number.label=Extract number
 systemProperty.extract.number.description=Extract number defines how many subjects the system will paginate through while extracting data.  \
   This number can be increased to use higher amounts of memory and potentially decrease the amount of time extracts take.  You can lower this number if you have extremely large \
   extracts to reduce the impact to online users while extracts are running.
+systemProperty.sas.dir.label=SAS extract folder
+systemProperty.sas.dir.description=This property defines the SAS folder that must be available to both ClinCapture and the SAS server. It is assumed to be mounted using NFS<br/><br/> \ \
+  For example:<br/><br/> \
+  Windows: C:\\\\SAS<br/> \
+  Linux:       /usr/local/sas \
 
 systemProperty.mailHost.label=Host name
 systemProperty.mailHost.description=These Properties configure the email interface. SMTP and SMTPS protocols are supported. \
@@ -3434,4 +3439,4 @@ systemProperty.ccts.waitBeforeCommit.description=This parameter is used for Clin
   with the Cancer Clinical Trials Suites, also known as the caBIG suite of applications. The parameter determines how long ClinCapture will hold a \
   transaction from C3PR and will wait for a roll back message before committing it to the database.
 systemProperty.ccts.waitBeforeCommit.measurements=(in milliseconds)
-create_rule=Create a Rule
+create_rule=Design a Rule
