Fixes #990: Create new home page layout that will allow to add metrics for different users. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1078 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3191,6 +3191,16 @@ tui = TUI
 umls_cui = UMLS CUI
 completed = Completed
 
+# ticket 329
+customize_home_page = Customize Home Page
+
+# widgets headers
+nds_assigned_to_me_widget_header = Notes & Discrepancies Assigned to Me
+events_completion_widget_header = Events Completion
+
+# toolbar header
+available_widgets = Available Widgets
+
 import_summary_subjects_affected = Subjects: {0} affected
 import_summary_events_affected = Events: {0} affected
 import_summary_item_affected = Items: {0} affected
