Fixes #956: Stmp and Smtps should be renamed SMTP and SMTPS. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1085 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3371,8 +3371,8 @@ systemProperty.mailPassword.label=Password
 systemProperty.mailPassword.description=
 systemProperty.mailProtocol.label=Protocol
 systemProperty.mailProtocol.description=
-systemProperty.mailProtocol.smtp.radioLabel=Smtp
-systemProperty.mailProtocol.smtps.radioLabel=Smtps
+systemProperty.mailProtocol.smtp.radioLabel=SMTP
+systemProperty.mailProtocol.smtps.radioLabel=SMTPS
 systemProperty.mailAuth.label=Authentication
 systemProperty.mailAuth.description=
 systemProperty.mailAuth.true.radioLabel=True
