Fixes #984: Allow Login page to be labeled Development or Training. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1093 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3340,6 +3340,12 @@ systemProperty.themeColor.description=This parameter defines the color for the s
 systemProperty.themeColor.blue.radioLabel=Blue
 systemProperty.themeColor.green.radioLabel=Green
 systemProperty.themeColor.violet.radioLabel=Violet
+systemProperty.instanceType.label=Instance type
+systemProperty.instanceType.description=This property adds a label to the login page to clearly identify the instance type. <br/> \
+  Note that if the instance is Production, no label appears in the login page.
+systemProperty.instanceType.development.radioLabel=Development
+systemProperty.instanceType.training.radioLabel=Training
+systemProperty.instanceType.production.radioLabel=Production
 systemProperty.logo.label=Logo
 systemProperty.logo.description=Upload your logo.  Must be .JPEG file with a maximum size of 20K.
 
