Fixes #917: Change the column headers to indicate only open discrepancies are displayed. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1104 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3195,7 +3195,7 @@ completed = Completed
 customize_home_page = Customize Home Page
 
 # widgets headers
-nds_assigned_to_me_widget_header = Notes & Discrepancies Assigned to Me
+nds_assigned_to_me_widget_header = My discrepancies
 events_completion_widget_header = Events Completion
 
 # toolbar header
