--- a/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/notes.properties
@@ -775,6 +775,7 @@ your_openclinica_password = your ClinCapture password
 the_study_site_status_is = The study/site status is
 welcome_to = Welcome to
 notes_assigned_to_me= Notes & Discrepancies Assigned to Me:\t
+unresolved_discrepancies_assigned_to_me = Unresolved Discrepancies Assigned to Me:\t
 
 your_password_has_been_reset_as = Your password has been reset as
 
