Fixes #991: Users should automatically receive access to new widgets. Submitted by denis (with modifications)
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1115 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -414,6 +414,8 @@ new_user_added_to_study = new user added to study
 
 new_user_password = New User Password
 
+new_widget_added_to_system = The new widget has been added to the system. You can access it on the customization page.
+
 no_CRF_assigned_pick_another = There are no CRFs assigned to this Study. Please pick another Study, or ask an administrator to assign CRFs to this Study before you continue.
 
 no_CRF_selected_for_definition_add_later = No CRF is selected for this Definition this time, you may add CRFs later.
