Fixes #399: SAS Extracts. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1125 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -3359,10 +3359,13 @@ systemProperty.extract.number.description=Extract number defines how many subjec
   This number can be increased to use higher amounts of memory and potentially decrease the amount of time extracts take.  You can lower this number if you have extremely large \
   extracts to reduce the impact to online users while extracts are running.
 systemProperty.sas.dir.label=SAS extract folder
-systemProperty.sas.dir.description=This property defines the SAS folder that must be available to both ClinCapture and the SAS server. It is assumed to be mounted using NFS<br/><br/> \ \
+systemProperty.sas.dir.description=This property defines the SAS folder that must be available to both ClinCapture and the SAS server. The network disc must be mapped or mounted using NFS.<br/><br/> \ \
   For example:<br/><br/> \
   Windows: C:\\\\SAS<br/> \
-  Linux:       /usr/local/sas \
+  Linux:       /usr/local/sas
+systemProperty.sas.timer.label=SAS extract timeout
+systemProperty.sas.timer.description=This property specifies the maximum time allowed for the extract to complete.
+systemProperty.sas.timer.measurements=(hrs)
 
 systemProperty.mailHost.label=Host name
 systemProperty.mailHost.description=These Properties configure the email interface. SMTP and SMTPS protocols are supported. \
