--- a/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/exceptions.properties
@@ -418,7 +418,7 @@ error.systemProperty.logoFile.forbiddenExtention=You can upload logo files with 
 
 error.controllerErrorMsg=Sorry, an error has occurred. Try it again or contact your system administrator.
 
-sasDataset.exception.failed=Job: {0}. After {1} attempts per minute the SAS dataset was not generated.
+sasDataset.exception.failed=Job: {0}. After {1} hour{2} the SAS dataset was not generated.
 sasDataset.exception.folder=The ''{0}'' folder was specified but it does not exist. The next fire time is: {1}
 sasDataset.exception.zip=The ready.txt was found but the sas dataset zip was not found. The next fire time is: {0}
 sasDataset.exception.sasExtractFolder=You should specify the SAS extract folder on the system properties page.
