--- a/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/terms.properties
@@ -354,7 +354,7 @@ xml_file_to_upload = Upload an XML file here
 Update = Update
 Propose_Resolution = Propose Resolution
 Close = Close
-updaate_note = Update Note
+update_note = Update Note
 close_note = Close Note
 rule_import_getting_started = Getting started with rules
 rule_import_example_rules = Example rules
