Fixes #921: Change archive/unarchive workflow to lock/unlock. Submitted by aram (with modifications)
git-svn-id: https://svn.clinovo.com/clincapture/trunk@1129 14881f01-568e-124b-961a-bb94932aa8d1

--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -133,11 +133,11 @@ crf_name_already_used = This CRF name has already been used. Either change the n
 
 crf_version_archived_successfully = The CRF version has been archived.
 
-crf_version_locked_successfully = The CRF Version is locked successfully.
+crf_version_locked_successfully = The CRF Version has been locked.
 
 crf_version_unarchived_successfully = The CRF version has been unarchived.
 
-crf_version_unlocked_successfully = The CRF Version is unlocked successfully.
+crf_version_unlocked_successfully = The CRF Version has been unlocked.
 
 import_study_frozen = The site or study for this import job is Frozen, and cannot import data.
 
