--- a/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/words.properties
@@ -2692,12 +2692,11 @@ rule_verify_import_invalid_rule_assignments = Invalid Rule Assignments
 rule_verify_import_errors = Errors
 unlock_crf_version = Unlock CRF Version
 
-confirm_archive_of_this_version = Please confirm  the archiving of this CRF version. <p> </p><b> If this version is the default version for an Event Definition do not archive until you select a new default version for this CRF in the Event Definition.   Please archive it after choosing a new version for the event definition.</b>
-confirm_unarchiving_of_this_version = Please confirm the unarchiving of this CRF version.
-no_new_event_will_be_created_using_this_version = Then no new event CRF can be created using this CRF version.
+confirm_lock_of_this_version = Please confirm  the locking of this CRF version. Then no new event CRF can be created using this CRF version. <p> </p><b> If this version is the default version for an Event Definition do not lock until you select a new default version for this CRF in the Event Definition. Please lock it after choosing a new version for the event definition.</b>
+confirm_unlocking_of_this_version = Please confirm the unlocking of this CRF version.
 this_version_will_available_when_creating_event = Then this CRF version will be available for creating event CRF.
-confirm_archiving_crf_version = Confirm Archiving CRF Version
-confirm_unarchiving_crf_version = Confirm Unarchiving CRF Version
+confirm_locking_crf_version = Confirm Locking CRF Version
+confirm_unlocking_crf_version = Confirm Unlocking CRF Version
 subjects_events_using_this_version = Subjects that are in the middle of data entry for this CRF version are shown as following
 currently_no_subject_using_this_version = Currently there is no subject data entered for this CRF version
 You_have_filtered_status = You have filtered on the status(es):
