--- a/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
+++ b/web/src/main/resources/org/akaza/openclinica/i18n/page_messages.properties
@@ -1055,7 +1055,13 @@ your_study_event_oid_for_subject_oid = Your Study Event OID {0} for Subject OID 
 
 your_study_oid_does_not_reference_an_existing = Your Study OID {0} does not reference an existing Study or Site in the database. Please check it and try again.
 
+your_subject_oid_is_linked_with_another_study = Your Subject OID {0} is linked with another Study.
+
 your_subject_oid_does_not_reference = Your Subject OID {0} does not reference an existing Subject in the Study.
+
+study_subject_id_should_be_specifyed=The Study Subject Id should be specified.
+
+study_subject_id_is_not_unique_in_the_study_you_may_change_the_study_param = Your Study Subject Id {0} is not unique in the Study. You may change the study parameter 'How to Generate the Study Subject ID' to auto-generated.
 
 your_user_name_used_by_other_try_another = Your user name has been used by other users. Please try another name.
 
